<?xml version="1.0"?>
<package>
	<name>tsr</name>
	<version>0.0.1</version>
	<description>
		Python package for using Task Space Regions
	</description>
	<url type="repository">https://github.com/personalrobotics/tsr.git</url>
	<maintainer email="cliddick@andrew.cmu.edu">Clinton Liddick</maintainer>
	<author email="mkoval@cs.cmu.edu">Michael Koval</author>
	<author email="jeking@cs.cmu.edu">Jennifer King</author>
	<license>BSD</license>
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>python</build_depend>
	<run_depend>python</run_depend>
	<run_depend>python-numpy</run_depend>
	<run_depend>openrave</run_depend>
	<run_depend>openrave_catkin</run_depend>
</package>