<?xml version="1.0"?>
<package format="2">
  <name>tsr</name>
  <version>0.0.1</version>
  <description>
    Python package for using Task Space Regions
  </description>
  <url type="repository">https://github.com/personalrobotics/tsr.git</url>
  <maintainer email="cliddick@andrew.cmu.edu">Clinton Liddick</maintainer>
  <author email="mkoval@cs.cmu.edu">Michael Koval</author>
  <author email="jeking@cs.cmu.edu">Jennifer King</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>python</depend>
  <depend>python-numpy</depend>
  <depend>python-scipy</depend>
</package>
