[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tsr"
version = "1.0.0"
description = "Python package for using Task Space Regions"
readme = "README.md"
license = {text = "BSD"}
authors = [
    {name = "Siddhartha Srinivasa", email = "siddh@cs.washington.edu"}
]
maintainers = [
    {name = "Siddhartha Srinivasa", email = "siddh@cs.washington.edu"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["robotics", "motion-planning", "task-space-regions", "tsr"]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pyyaml>=5.4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "build>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/personalrobotics/tsr"
Repository = "https://github.com/personalrobotics/tsr.git"

[tool.hatch.build.targets.wheel]
packages = ["src/tsr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/tsr"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
] 